<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22443B"
    android:foregroundGravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/vertical_banner_with_green_leaves_wall_space_decoration_cafe_office_idea_screen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:foregroundGravity="center_horizontal"
        android:text="History App"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/btnResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#000000"
        android:text="Display Results"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAge" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#759352"
        android:text="Clear Results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnResults"
        app:layout_constraintTop_toBottomOf="@+id/edtAge" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="131dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:text="Enter age below"
        android:textColor="#8BC34A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="234dp"
        android:layout_height="218dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="78dp"
        android:text="Results"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResults" />

</androidx.constraintlayout.widget.ConstraintLayout>